--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,7 @@ Plugins/**/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+.DS_Store
+.idea/
+Content/Python/__pycache__
+Dist/
